@@ -216,3 +216,8 @@ if(NOT POTHOS_INCLUDE_DIR)
 endif()
 list(INSERT Pothos_INCLUDE_DIRS 0 ${POTHOS_INCLUDE_DIR})
 _POTHOS_GET_ABI_VERSION(POTHOS_ABI_VERSION ${POTHOS_INCLUDE_DIR})
+
+#create interface library to support modern cmake target linking
+add_library(Pothos INTERFACE)
+target_link_libraries(Pothos INTERFACE "${Pothos_LIBRARIES}")
+target_include_directories(Pothos INTERFACE "${Pothos_INCLUDE_DIRS}")
